[package]
name = "iso"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
chrono = "0.4.38"
ezsockets = { version = "0.6.2", features = ["tokio-rustls", "rustls"] }
iyes_perf_ui = "0.2.3"
nid = "3.0.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
